--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,10 @@
 .row 
   #breadcrumbs.span12
-
+.row
+  #database-list.span12
 script(src="/javascripts/congo/index.js")
 script(src="/javascripts/congo/nav.js")
+script(src="/javascripts/congo/database.js")
 
 script
   $(function() {
