refactor db table view

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,19 +1,28 @@
 .row 
   #breadcrumbs.span12
 .row
-  #database-list.span12
+  #database-list.span9
+  #db-options.span3
+    form#addDb
+      input(id="newDb", type="text")
+      button.btn(type="submit")
+        i.icon.icon-plus-sign
+        |  Add Db
 
 script(src="/javascripts/congo/index.js")
 script(src="/javascripts/congo/nav.js")
 script(src="/javascripts/congo/database.js")
 
 script#database-list-template(type="text/template")
-  <td>
-  <a href="#"><%=name%></a>
-  </td>
-  <td>
-  <button class="btn btn-primary">Click Me</button>
-  </td>
+  td(width=60)
+    img(src="/img/collections.png", style="height: 24px")
+  td
+    h4
+      a(href="#")<%=name%>
+  td
+    button.btn.delete-collection
+      i.icon.icon-remove
+      |  delete
 
 script
   $(function() {
