add db on submit

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ script(src="/javascripts/congo/database.js")
 
 script#database-option-template(type="text/template")
   form#addDb
-      input(id="newDb", type="text")
+      input#newDb(id="newDb", type="text")
       button.btn(type="submit")
         i.icon.icon-plus-sign
         |  Add Db
