--- a/views/index.jade
+++ b/views/index.jade
@@ -1,13 +1,19 @@
-.row 
-  #breadcrumbs.span12
-.row
-  #database-list.span9
-  #db-options.span3
-    
+#app.row 
+  .span12
+    ul#nav.breadcrumb
+  
+  #details
 
 script(src="/javascripts/congo/index.js")
+script(src="/javascripts/congo/base.js")
 script(src="/javascripts/congo/nav.js")
 script(src="/javascripts/congo/database.js")
+
+script#db-details-template(type="text/template")
+  .row
+    .span12
+      #database-list.span9
+      #database-options.span3
 
 script#database-option-template(type="text/template")
   form#addDb
