--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ script(src="/javascripts/congo/index.js")
 script(src="/javascripts/congo/base.js")
 script(src="/javascripts/congo/nav.js")
 script(src="/javascripts/congo/database.js")
+script(src="/javascripts/congo/collections.js")
 
 script#db-details-template(type="text/template")
   .row
